lintian-brush (0.73) UNRELEASED; urgency=medium

  * Fix handling of interrupted lines.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 17 Jul 2020 17:45:29 +0000

lintian-brush (0.72) unstable; urgency=medium

  * Handle accidental scm: location strings in repository browse tags in
    pom.xml files.
  * Add missing dependency on bs4.
  * Depend on debmutate for most editing functionality.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 17 Jul 2020 01:25:23 +0000

lintian-brush (0.71) unstable; urgency=medium

  * When dropping get-orig-source target, also update .PHONY.
  * Remove .PHONY when removing a component from it leaves it empty.
  * Add support for reading upstream metadata from pom.xml.
  * Convert private VCS URLs to public URLs, e.g. on salsa or GitHub.
  * maintainer-script-without-set-e: Improve spacing.
  * uses-debhelper-compat-file: support debhelper dependencies in Build-
    Depends-Indep or Build-Depends-Arch.
  * When removing duplicate lines from a changelog, also drop any
    sections that may be left empty.
  * Properly update changelog entries without trailer.
  * When removing debug symbol migration commands, be more aggressive
    cleaning up commands.
  * Add Changes-By in commit message. Related to #946801
  * Add basic fixer for generating copyright files using decopy, not run
    by default.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 30 Jun 2020 17:34:59 +0000

lintian-brush (0.70) unstable; urgency=medium

  * systemd-service-file-pidfile-refers-to-var-run: Also update other
    references to pid file.
  * built-using-field-on-arch-all-package: Only fix for golang packages
    for now.
  * Drop use of pkginfo and just use email.message to parse PKG-INFO
    files.
  * Add support for retrieving upstream metadata from Cargo.toml.
  * license-file-listed-in-debian-copyright: Properly remove Files
    entries with just newlines.
  * Update to follow renames of tags in lintian 2.80.
